--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ body {
   background-color: #000;
   font-family: "Inter UI", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 
-}
+}git 
 
 main {
   min-height: 100%;
@@ -26,8 +26,9 @@ main {
 }
 
 nav {
-  display: flex;
-  justify-content: start;
+  /* display: flex;
+  justify-content: start; */
+  padding: 20px 35px;
 }
 
 section {
@@ -46,4 +47,20 @@ footer{
   display: flex;
   justify-content: center; 
   color: #78909C 
+}
+
+h1  {
+  font-weight: 800;
+  font-size: 3rem;
+}
+
+h4 {
+  font-size: 1.375rem;
+  font-weight: 700;
+}
+
+p {
+  font-size: 1.2rem;
+    font-weight: 500;
+    color: #CFD8DC;
 }
