--- a/styles.css
+++ b/styles.css
@@ -31,11 +31,22 @@ nav {
   padding: 20px 35px;
 }
 
+.middle {
+  display: flex;
+  justify-content: center;
+}
+
 section {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  /* align-items: center; */
+  justify-content: center;
   padding-bottom: 80px;
+  max-width: 540px;
+}
+
+.section_item {
+  align-self: center;
 }
 
 footer{
