--- a/styles.css
+++ b/styles.css
@@ -9,50 +9,76 @@
 
 html,
 body {
-  height: 100%;
+  /* height: 100vh; */
+  margin: 0;
+  padding: 0;
   overflow-x: hidden;
+  line-height: 1.5;
+}
+
+html {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 body {
+  flex-grow: 1;
   color: #ffffff;
   background-color: #000;
   font-family: "Inter UI", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 
-}git 
+}
 
 main {
-  min-height: 100%;
-    position:relative;
+  min-height: 100vh;
+    /* position:relative; */
+    display: flex;
+    flex-flow: column;
+    height: 100vh;
+}
+
+.area {
+  border: 2px dotted white;
 }
 
 nav {
   /* display: flex;
   justify-content: start; */
   padding: 20px 35px;
+  flex: 0 1 auto;
 }
 
 .middle {
+  flex: 1 1 auto;
   display: flex;
   justify-content: center;
+  margin: 0 20%;
+  
+
+  
 }
 
-section {
+.content_section {
   display: flex;
   flex-direction: column;
   /* align-items: center; */
   justify-content: center;
   padding-bottom: 80px;
-  max-width: 540px;
+  max-width: 66.66%;
 }
 
 .section_item {
   align-self: center;
 }
 
+p { margin-top: 50px;}
+
 footer{
-  height: 80px; 
+  flex: 0 1 80px;
+  /* height: 80px;  */
   width:100%;
-  position: absolute;
+  /* position: absolute; */
   left: 0;
   bottom: 0;
   display: flex;
@@ -63,15 +89,19 @@ footer{
 h1  {
   font-weight: 800;
   font-size: 3rem;
+  text-align: center;
+  padding-top: 20%;
 }
 
 h4 {
   font-size: 1.375rem;
   font-weight: 700;
+  padding-top: 10%;
 }
 
 p {
   font-size: 1.2rem;
     font-weight: 500;
     color: #CFD8DC;
+    text-align: center;
 }
